--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy==1.24.3
-torch==2.0.0
-torchvision==0.15.0
-transformers==4.24.0
+numpy==1.26.3
+torch==2.5.1+cu118
+torchvision==0.20.1+cu118
+pretrainedmodels==0.7.4
